@@ -2,7 +2,11 @@
 #
 # Plugin to monitor sendmail statistics.
 #
-# Usage: Place in /etc/lrrd/client.d/ (or link it there  using ln -s)
+# Usage: Place in /etc/munin/plugins/ (or link it there  using ln -s)
+#
+# Config variables:
+#
+#	mailstats - path to mailstats command
 #
 # Parameters understood:
 #
@@ -10,63 +14,60 @@
 # 	autoconf (optional)
 #
 # $Log$
-# Revision 1.4  2004/11/21 20:27:53  jimmyo
-# Upped generic/sendmail_mailstats and generic/sendmail_mailtraffic to auto family.
+# Revision 1.5  2005/01/03 14:17:30  jimmyo
+# Plugins generic/sendmail_mail{stats,traffic} updated.
 #
-# Revision 1.3  2004/11/10 15:49:05  jimmyo
-# Fixed typo in generic/sendmail_mailstats (patch by Lupe Christoph, SF#1058128).
-#
-# Revision 1.2  2004/05/20 19:02:36  jimmyo
-# Set categories on a bunch of plugins
-#
-# Revision 1.1  2004/02/18 18:40:03  jimmyo
-# Added Log:
 #
 # Magic markers (used by munin-node-configure)
 #%# capabilities=autoconf
 #%# family=auto
 
-TEMP_FILE=/tmp/munin-sendmail.$$
+if [ -n "$mailstats" ]; then MAILSTATS=$mailstats; else MAILSTATS=`which mailstats`; fi
 
 if [ "$1" = "autoconf" ]; then
-        if which mailstats 2>&1 > /dev/null ; then
+	if [ -x $MAILSTATS ]; then
 		echo yes
 		exit 0
 	else
-		echo no
+		echo "no (no mailstats command)"
 		exit 1
 	fi
 fi
 
 if [ "$1" = "config" ]; then
 
-	echo 'graph_title Sendmail email traffic'
-	echo 'graph_order received sent rejected discarded'
-	echo 'graph_vlabel mails'
-	echo 'graph_category sendmail'
-	echo 'received.label received'
-	echo 'sent.label sent'
-	echo 'rejected.label rejected'
-	echo 'discarded.label discarded'
+	echo "graph_title Sendmail email traffic"
+	echo "graph_order received sent rejected discarded"
+	echo 'graph_vlabel messages/${graph_period}'
+	echo "graph_category sendmail"
+	echo "discarded.label discarded"
+	echo "discarded.max 1000000"
+	echo "discarded.min 0"
+	echo "discarded.type DERIVE"
+	echo "received.label received"
+	echo "received.max 1000000"
+	echo "received.min 0"
+	echo "received.type DERIVE"
+	echo "rejected.label rejected"
+	echo "rejected.max 1000000"
+	echo "rejected.min 0"
+	echo "rejected.type DERIVE"
+	echo "sent.label sent"
+	echo "sent.max 1000000"
+	echo "sent.min 0"
+	echo "sent.type DERIVE"
 	exit 0
 fi
 
-mailstats -p > ${TEMP_FILE}
-received=0 ; sent=0 ; rejected=0 ; discarded=0
-grep '^ *T' ${TEMP_FILE} | \
-(
-while read line ; do
-  set -- ${line}
-  received=`expr ${received} + $4`
-  sent=`expr ${sent} + $2`
-  rejected=`expr ${rejected} + $6`
-  discarded=`expr ${discarded} + $7`
-done 
-
-rm -f ${TEMP_FILE}
-
-echo "received.value ${received}"
-echo "sent.value ${sent}"
-echo "rejected.value ${rejected}"
-echo "discarded.value ${discarded}"
-)
+$MAILSTATS -P | awk '/^ *T/ {
+  received = received + $4 ;
+  sent = sent + $2
+  rejected = rejected + $6
+  discarded = discarded + $7
+}
+END {
+  print "received.value", received
+  print "sent.value", sent
+  print "rejected.value", rejected
+  print "discarded.value", discarded
+}'
