@@ -4,32 +4,28 @@
 #
 # Usage: Place in /etc/lrrd/client.d/ (or link it there  using ln -s)
 #
+# Config variables:
+#
+#       mailstats - path to mailstats command
+#
 # Parameters understood:
 #
 # 	config   (required)
 # 	autoconf (optional)
 #
 # $Log$
-# Revision 1.5  2004/12/09 17:17:46  jimmyo
-# Fixed broken autoconf in generic/sendmail_mailtraffic (SF#1074528).
+# Revision 1.6  2005/01/03 14:17:30  jimmyo
+# Plugins generic/sendmail_mail{stats,traffic} updated.
 #
-# Revision 1.4  2004/11/21 20:27:53  jimmyo
-# Upped generic/sendmail_mailstats and generic/sendmail_mailtraffic to auto family.
-#
-# Revision 1.3  2004/05/20 19:02:36  jimmyo
-# Set categories on a bunch of plugins
-#
-# Revision 1.2  2004/02/18 18:40:03  jimmyo
-# Added Log:
 #
 # Magic markers (used by munin-node-configure)
 #%# capabilities=autoconf
 #%# family=auto
 
-TEMP_FILE=/tmp/munin-sendmail.$$
+if [ -n "$mailstats" ]; then MAILSTATS=$mailstats; else MAILSTATS=`which mailstats`; fi
 
 if [ "$1" = "autoconf" ]; then
-	if which mailstats 2>&1 > /dev/null ; then
+	if [ -x $MAILSTATS ]; then
 		echo yes
 		exit 0
 	else
@@ -40,25 +36,28 @@ fi
 
 if [ "$1" = "config" ]; then
 
-	echo 'graph_title Sendmail email volumes'
-	echo 'graph_order received sent'
-	echo 'graph_vlabel bytes'
-	echo 'graph_category sendmail'
-	echo 'received.label received'
-	echo 'sent.label sent'
+	echo "graph_title Sendmail email volumes"
+	echo "graph_order received sent"
+	echo 'graph_vlabel bytes/${graph_period}'
+	echo "graph_category sendmail"
+	echo "received.label received"
+	echo "sent.label sent"
+	echo "received.max 1000000"
+	echo "received.min 0"
+	echo "sent.max 1000000"
+	echo "sent.min 0"
+	echo "received.type DERIVE"
+	echo "sent.type DERIVE"
 	exit 0
 fi
 
-received=0 ; sent=0
-grep '^ *T' ${TEMP_FILE} | \
-(
-while read line ; do
-  set -- ${line}
-  received=`expr ${received} + $5`
-  sent=`expr ${sent} + $3`
-done
-rm -f ${TEMP_FILE}
+$MAILSTATS -P | awk '/^ *T/ {
+  received = received + $5
+  sent = sent + $3
+}
 
-echo "received.value ${received}"
-echo "sent.value ${sent}"
-)
+END {
+  print "received.value", received
+  print "sent.value", sent
+}'
+
