@@ -2,6 +2,7 @@ munin (work)
 
   * Main: Allow dots in PNG paths (patch by Jacques Caruso).
   * Munin-html: Properly size table below graphs in service-view.
+  * Plugins: generic/sendmail_mail{stats,traffic} updated.
 
 munin (1.1.9)
 
